cambios, se agrega formato PRMX

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>BDM</title>
 </head>
 <body>
-    <P>Hola esttudiantes
-        siganme en mi sitio web
-        si tienes dudas preguntame
+    <P>Hola Amigos PRMX siganos en
+        nuestras redes
     </P>
 </body>
 </html>
